[project]
name = "comfyui-strimmlarns-aesthetic-score"
description = ""
version = "1.0.0"
license = "LICENSE"

[project.urls]
Repository = "https://github.com/strimmlarn/ComfyUI-Strimmlarns-Aesthetic-Score"
#  Used by Comfy Registry https://comfyregistry.org

[tool.comfy]
PublisherId = ""
DisplayName = "ComfyUI-Strimmlarns-Aesthetic-Score"
Icon = ""
